# Generative-AI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
chatmodel/: chat.py  huggingface.py
extractmodel/: genextract.py  genextractwithUI.py
static/: script.js  style.css
templates/: index.html
